--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,28 @@
-git+https://github.com/MN-BOTZ/pyrogram@inline-m
+git+https://github.com/subinps/pyrogram@inline-m
 tgcrypto
-Heroku3
-pymongo[srv]==3.11.4
-motor==2.4.0
-marshmallow 
+pymongo[srv]
+motor
+marshmallow
+python-telegram-bot
 umongo
 requests
 bs4
-Pyromod
 imdbpy==2021.4.18
+youtube-dl
+youtube_search
 requests
-googletrans==3.1.0a0
+flask
+flask_restful
+googletrans
 telegraph
 beautifulsoup4
+aiohttp
 gTTS
-googletrans==3.1.0a0
+googletrans
 NumPy
 glitch_this
 opencv-python-headless
-
-yt-dlp
-youtube_search_python
-youtube-dl
-youtube_search
-ytthumb
-search_engine_parser
-
-
+youtube-search-python
 pypng
 Pillow
 wget
@@ -34,13 +30,22 @@ aiofiles
 psutil
 wheel
 humanize
-PyPDF2
+ytthumb
 pyshorteners
-ffmpeg-python
-py-tgcalls
-python-dotenv
-aiohttp
 asyncio
-ffmpeg
-ujson
+datetime
+PyDictionary
+PyPDF2
+pypdf2
+prettyconf
+cachetools
+spamwatch
+mapping
+telethon
+yt-dlp
+Heroku3
 speedtest
+pyyaml
+shazamio
+ffmpeg
+Wikipedia
